Fix mis-aligned buttons

--- a/arches/app/media/css/arches.scss
+++ b/arches/app/media/css/arches.scss
@@ -692,6 +692,7 @@ dl.inline-flex dd {
     padding: 10px;
     background-color: #ececec;
     border-top: solid 1px #ddd;
+    display: flex;
 }
 
 .tabbed-workflow-step-body .display-in-workflow-step.install-buttons {
